@@ -1,6 +1,7 @@
 package kasanari.catalog.paimon;
 
 import org.apache.paimon.catalog.Identifier;
+import org.apache.paimon.data.GenericRow;
 import org.apache.paimon.function.FunctionDefinition;
 import org.apache.paimon.rest.requests.AlterDatabaseRequest;
 import org.apache.paimon.rest.requests.AlterFunctionRequest;
@@ -23,6 +24,8 @@ import org.apache.paimon.rest.requests.RenameTableRequest;
 import org.apache.paimon.rest.requests.ResetConsumerRequest;
 import org.apache.paimon.rest.requests.RollbackSchemaRequest;
 import org.apache.paimon.rest.requests.RollbackTableRequest;
+import org.apache.paimon.rest.responses.GetFunctionResponse;
+import org.apache.paimon.rest.responses.GetViewResponse;
 import org.apache.paimon.schema.Schema;
 import org.apache.paimon.table.Instant;
 import org.apache.paimon.types.DataField;
@@ -40,7 +43,8 @@ import java.util.Map;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
@@ -208,8 +212,12 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases());
 
         var request = new CreateDatabaseRequest(database, Map.of("owner", "test"));
+        catalog.createDatabase(prefix, request);
 
-        assertDoesNotThrow(() -> catalog.createDatabase(prefix, request));
+        var created = catalog.getDatabase(prefix, database);
+
+        assertEquals(database, created.getName());
+        assertEquals("test", created.getOptions().get("owner"));
     }
 
     @Test
@@ -231,8 +239,9 @@ public abstract class PaimonCatalogAdapterTest {
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.dropDatabase(prefix, database);
 
-        assertDoesNotThrow(() -> catalog.dropDatabase(prefix, database));
+        assertFalse(catalog.listDatabases(prefix, 100, null).getDatabases().contains(database));
     }
 
     @Test
@@ -243,7 +252,8 @@ public abstract class PaimonCatalogAdapterTest {
         var alterDatabaseRequest = new AlterDatabaseRequest(List.of("owner"), Map.of("owner", "updated"));
         catalog.createDatabase(prefix, createDatabaseRequest);
 
-        assertTrue(catalog.alterDatabase(prefix, database, alterDatabaseRequest).getUpdated().contains("owner"));
+        var result = catalog.alterDatabase(prefix, database, alterDatabaseRequest);
+        assertTrue(result.getUpdated().contains("owner"));
     }
 
     @Test
@@ -267,8 +277,9 @@ public abstract class PaimonCatalogAdapterTest {
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         var registerTableRequest = new RegisterTableRequest(Identifier.create(database, table), registeredTablePath(database, table));
         catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.registerTable(prefix, database, registerTableRequest);
 
-        assertDoesNotThrow(() -> catalog.registerTable(prefix, database, registerTableRequest));
+        assertEquals(table, catalog.getTable(prefix, database, table).getName());
     }
 
     @Test
@@ -290,8 +301,9 @@ public abstract class PaimonCatalogAdapterTest {
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createTable(prefix, database, createTableRequest);
 
-        assertDoesNotThrow(() -> catalog.createTable(prefix, database, createTableRequest));
+        assertEquals(table, catalog.getTable(prefix, database, table).getName());
     }
 
     @Test
@@ -375,8 +387,9 @@ public abstract class PaimonCatalogAdapterTest {
         var alterTableRequest = new AlterTableRequest(Collections.emptyList());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.alterTable(prefix, database, table, alterTableRequest);
 
-        assertDoesNotThrow(() -> catalog.alterTable(prefix, database, table, alterTableRequest));
+        assertEquals(table, catalog.getTable(prefix, database, table).getName());
     }
 
     @Test
@@ -388,8 +401,9 @@ public abstract class PaimonCatalogAdapterTest {
         var alterTableRequest = new AlterTableRequest(null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.alterTable(prefix, database, table, alterTableRequest);
 
-        assertDoesNotThrow(() -> catalog.alterTable(prefix, database, table, alterTableRequest));
+        assertEquals(table, catalog.getTable(prefix, database, table).getName());
     }
 
     @Test
@@ -400,8 +414,9 @@ public abstract class PaimonCatalogAdapterTest {
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.dropTable(prefix, database, table);
 
-        assertDoesNotThrow(() -> catalog.dropTable(prefix, database, table));
+        assertFalse(catalog.listTables(prefix, database, 100, null, null).getTables().contains(table));
     }
 
     @Test
@@ -413,37 +428,43 @@ public abstract class PaimonCatalogAdapterTest {
         var renameTableRequest = new RenameTableRequest(Identifier.create(database, table), Identifier.create(database, renamedTable));
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.renameTable(prefix, renameTableRequest);
 
-        assertDoesNotThrow(() -> catalog.renameTable(prefix, renameTableRequest));
+        var tables = catalog.listTables(prefix, database, 100, null, null).getTables();
+        assertFalse(tables.contains(table));
+        assertTrue(tables.contains(renamedTable));
     }
 
     @Test
     void commitTable() {
         assumeTrue(supportsDatabases() && supportsTables() && supportsTableMutations() && supportCommit());
 
-        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
-        var commitTableRequest = new CommitTableRequest(table, null, null);
-        catalog.createDatabase(prefix, createDatabaseRequest);
-        catalog.createTable(prefix, database, createTableRequest);
+        createDatabaseAndTable();
+        triggerTableSnapshot(database, table);
+        var latestSnapshot = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot();
+        var commitTableRequest = new CommitTableRequest(
+                catalog.getTable(prefix, database, table).getId(),
+                latestSnapshot,
+                Collections.emptyList()
+        );
 
-        var expected = true;
-        var result = catalog.commitTable(prefix, database, table, commitTableRequest) != null;
+        var result = catalog.commitTable(prefix, database, table, commitTableRequest);
 
-        assertEquals(expected, result);
+        assertNotNull(result);
+        assertTrue(result.isSuccess());
     }
 
     @Test
     void rollbackTable() {
         assumeTrue(supportsDatabases() && supportsTables() && supportsTableMutations() && supportRollbackTable());
 
-        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
-        var rollbackTableRequest = new RollbackTableRequest(Instant.snapshot(1L), null);
-        catalog.createDatabase(prefix, createDatabaseRequest);
-        catalog.createTable(prefix, database, createTableRequest);
+        createDatabaseAndTable();
+        triggerTableSnapshot(database, table);
+        var snapshotId = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot().id();
+        var rollbackTableRequest = new RollbackTableRequest(Instant.snapshot(snapshotId), null);
+        catalog.rollbackTable(prefix, database, table, rollbackTableRequest);
 
-        assertDoesNotThrow(() -> catalog.rollbackTable(prefix, database, table, rollbackTableRequest));
+        assertEquals(snapshotId, catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot().id());
     }
 
     @Test
@@ -455,8 +476,9 @@ public abstract class PaimonCatalogAdapterTest {
         var rollbackSchemaRequest = new RollbackSchemaRequest(1L);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.rollbackSchema(prefix, database, table, rollbackSchemaRequest);
 
-        assertDoesNotThrow(() -> catalog.rollbackSchema(prefix, database, table, rollbackSchemaRequest));
+        assertEquals(table, catalog.getTable(prefix, database, table).getName());
     }
 
     @Test
@@ -475,22 +497,20 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
 
-        var expected = true;
-        var result = catalog.authTableQuery(prefix, database, table, authTableQueryRequest) != null;
-
-        assertEquals(expected, result);
+        assertNotNull(catalog.authTableQuery(prefix, database, table, authTableQueryRequest));
     }
 
     @Test
     void getTableSnapshot() {
         assumeTrue(supportsDatabases() && supportsTables() && supportSnapshot());
 
-        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
-        catalog.createDatabase(prefix, createDatabaseRequest);
-        catalog.createTable(prefix, database, createTableRequest);
+        createDatabaseAndTable();
+        triggerTableSnapshot(database, table);
+        var latestSnapshot = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot();
+        var result = catalog.getTableSnapshot(prefix, database, table).getSnapshot();
 
-        assertDoesNotThrow(() -> catalog.getTableSnapshot(prefix, database, table));
+        assertNotNull(result);
+        assertEquals(latestSnapshot.id(), result.snapshot().id());
     }
 
     @Test
@@ -501,8 +521,12 @@ public abstract class PaimonCatalogAdapterTest {
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
+        var latestSnapshot = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot();
+        var result = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot();
 
-        assertDoesNotThrow(() -> catalog.getVersionSnapshot(prefix, database, table, "main"));
+        assertNotNull(result);
+        assertEquals(latestSnapshot.id(), result.id());
     }
 
     @Test
@@ -513,11 +537,13 @@ public abstract class PaimonCatalogAdapterTest {
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
 
-        var expected = Collections.emptyList();
+        var expected = List.of(catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot().id());
         var result = catalog.listSnapshots(prefix, database, table, 100, null).getSnapshots();
+        var resultIds = result.stream().map(snapshot -> snapshot.id()).toList();
 
-        assertEquals(expected, result);
+        assertEquals(expected, resultIds);
     }
 
     @Test
@@ -544,8 +570,11 @@ public abstract class PaimonCatalogAdapterTest {
         var markDonePartitionsRequest = new MarkDonePartitionsRequest(Collections.emptyList());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.markDonePartitions(prefix, database, table, markDonePartitionsRequest);
+        var expected = Collections.emptyList();
+        var result = catalog.listPartitions(prefix, database, table, 100, null, null).getPartitions();
 
-        assertDoesNotThrow(() -> catalog.markDonePartitions(prefix, database, table, markDonePartitionsRequest));
+        assertEquals(expected, result);
     }
 
     @Test
@@ -573,8 +602,8 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
 
-        var expected = true;
-        var result = catalog.listBranches(prefix, database, table) != null;
+        var expected = List.of("main");
+        var result = catalog.listBranches(prefix, database, table).branches();
 
         assertEquals(expected, result);
     }
@@ -588,8 +617,10 @@ public abstract class PaimonCatalogAdapterTest {
         var createBranchRequest = new CreateBranchRequest(branch, null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.createBranch(prefix, database, table, createBranchRequest);
+        var branches = catalog.listBranches(prefix, database, table).branches();
 
-        assertDoesNotThrow(() -> catalog.createBranch(prefix, database, table, createBranchRequest));
+        assertTrue(branches.contains(branch));
     }
 
     @Test
@@ -602,8 +633,10 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
         catalog.createBranch(prefix, database, table, createBranchRequest);
+        catalog.dropBranch(prefix, database, table, branch);
+        var branches = catalog.listBranches(prefix, database, table).branches();
 
-        assertDoesNotThrow(() -> catalog.dropBranch(prefix, database, table, branch));
+        assertFalse(branches.contains(branch));
     }
 
     @Test
@@ -617,8 +650,11 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
         catalog.createBranch(prefix, database, table, createBranchRequest);
+        catalog.renameBranch(prefix, database, table, branch, renameBranchRequest);
+        var branches = catalog.listBranches(prefix, database, table).branches();
 
-        assertDoesNotThrow(() -> catalog.renameBranch(prefix, database, table, branch, renameBranchRequest));
+        assertFalse(branches.contains(branch));
+        assertTrue(branches.contains(renamedBranch));
     }
 
     @Test
@@ -631,9 +667,12 @@ public abstract class PaimonCatalogAdapterTest {
         var forwardBranchRequest = new ForwardBranchRequest();
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
         catalog.createBranch(prefix, database, table, createBranchRequest);
+        catalog.forwardBranch(prefix, database, table, branch, forwardBranchRequest);
+        var branches = catalog.listBranches(prefix, database, table).branches();
 
-        assertDoesNotThrow(() -> catalog.forwardBranch(prefix, database, table, branch, forwardBranchRequest));
+        assertTrue(branches.contains(branch));
     }
 
     @Test
@@ -660,8 +699,10 @@ public abstract class PaimonCatalogAdapterTest {
         var createTagRequest = new CreateTagRequest(tag, null, null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
+        catalog.createTag(prefix, database, table, createTagRequest);
 
-        assertDoesNotThrow(() -> catalog.createTag(prefix, database, table, createTagRequest));
+        assertEquals(tag, catalog.getTag(prefix, database, table, tag).tagName());
     }
 
     @Test
@@ -673,6 +714,7 @@ public abstract class PaimonCatalogAdapterTest {
         var createTagRequest = new CreateTagRequest(tag, null, null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
         catalog.createTag(prefix, database, table, createTagRequest);
 
         var expected = tag;
@@ -690,9 +732,11 @@ public abstract class PaimonCatalogAdapterTest {
         var createTagRequest = new CreateTagRequest(tag, null, null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
         catalog.createTag(prefix, database, table, createTagRequest);
+        catalog.deleteTag(prefix, database, table, tag);
 
-        assertDoesNotThrow(() -> catalog.deleteTag(prefix, database, table, tag));
+        assertEquals(Collections.emptyList(), catalog.listTags(prefix, database, table, 100, null, null).tags());
     }
 
     @Test
@@ -719,8 +763,11 @@ public abstract class PaimonCatalogAdapterTest {
         var resetConsumerRequest = new ResetConsumerRequest(uniqueName("consumer"), null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.resetConsumer(prefix, database, table, resetConsumerRequest);
+        var consumers = catalog.listConsumers(prefix, database, table, 100, null).getConsumers();
+        var consumerIds = consumers.stream().map(it -> it.getConsumerId()).toList();
 
-        assertDoesNotThrow(() -> catalog.resetConsumer(prefix, database, table, resetConsumerRequest));
+        assertEquals(List.of(resetConsumerRequest.consumerId()), consumerIds);
     }
 
     @Test
@@ -732,8 +779,10 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
 
-        var expected = true;
-        var result = catalog.listViews(prefix, database, 100, null, null).getViews().contains(view);
+        var expected = List.of(view);
+        var result = catalog.listViews(prefix, database, 100, null, null).getViews().stream()
+                .filter(expected::contains)
+                .toList();
 
         assertEquals(expected, result);
     }
@@ -745,8 +794,9 @@ public abstract class PaimonCatalogAdapterTest {
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         var createViewRequest = new CreateViewRequest(Identifier.create(database, view), viewSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createView(prefix, database, createViewRequest);
 
-        assertDoesNotThrow(() -> catalog.createView(prefix, database, createViewRequest));
+        assertEquals(view, catalog.getView(prefix, database, view).getName());
     }
 
     @Test
@@ -758,11 +808,13 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
 
-        var expected = true;
+        var expected = List.of(view);
         var result = catalog.listViewDetails(prefix, database, 100, null, null)
                 .getViewDetails()
                 .stream()
-                .anyMatch(it -> view.equals(it.getName()));
+                .map(GetViewResponse::getName)
+                .filter(expected::contains)
+                .toList();
 
         assertEquals(expected, result);
     }
@@ -776,10 +828,8 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
 
-        var expected = true;
-        var result = catalog.listViewsGlobally(prefix, database, view, 100, null)
-                .getViews()
-                .contains(Identifier.create(database, view));
+        var expected = List.of(Identifier.create(database, view));
+        var result = catalog.listViewsGlobally(prefix, database, view, 100, null).getViews();
 
         assertEquals(expected, result);
     }
@@ -808,8 +858,9 @@ public abstract class PaimonCatalogAdapterTest {
         var alterViewRequest = new AlterViewRequest(Collections.emptyList());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
+        catalog.alterView(prefix, database, view, alterViewRequest);
 
-        assertDoesNotThrow(() -> catalog.alterView(prefix, database, view, alterViewRequest));
+        assertEquals(view, catalog.getView(prefix, database, view).getName());
     }
 
     @Test
@@ -820,8 +871,9 @@ public abstract class PaimonCatalogAdapterTest {
         var createViewRequest = new CreateViewRequest(Identifier.create(database, view), viewSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
+        catalog.dropView(prefix, database, view);
 
-        assertDoesNotThrow(() -> catalog.dropView(prefix, database, view));
+        assertEquals(Collections.emptyList(), catalog.listViews(prefix, database, 100, null, null).getViews());
     }
 
     @Test
@@ -833,8 +885,11 @@ public abstract class PaimonCatalogAdapterTest {
         var renameViewRequest = new RenameTableRequest(Identifier.create(database, view), Identifier.create(database, renamedView));
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
+        catalog.renameView(prefix, renameViewRequest);
+        var views = catalog.listViews(prefix, database, 100, null, null).getViews();
 
-        assertDoesNotThrow(() -> catalog.renameView(prefix, renameViewRequest));
+        assertFalse(views.contains(view));
+        assertTrue(views.contains(renamedView));
     }
 
     @Test
@@ -842,20 +897,14 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createFunction(prefix, database, createFunctionRequest);
 
-        var expected = true;
-        var result = catalog.listFunctions(prefix, database, 100, null, null).functions().contains(function);
+        var expected = List.of(function);
+        var result = catalog.listFunctions(prefix, database, 100, null, null).functions().stream()
+                .filter(expected::contains)
+                .toList();
 
         assertEquals(expected, result);
     }
@@ -865,18 +914,11 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createFunction(prefix, database, createFunctionRequest);
 
-        assertDoesNotThrow(() -> catalog.createFunction(prefix, database, createFunctionRequest));
+        assertEquals(function, catalog.getFunction(prefix, database, function).name());
     }
 
     @Test
@@ -884,23 +926,17 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createFunction(prefix, database, createFunctionRequest);
 
-        var expected = true;
+        var expected = List.of(function);
         var result = catalog.listFunctionDetails(prefix, database, 100, null, null)
                 .getFunctionDetails()
                 .stream()
-                .anyMatch(it -> function.equals(it.name()));
+                .map(GetFunctionResponse::name)
+                .filter(expected::contains)
+                .toList();
 
         assertEquals(expected, result);
     }
@@ -910,22 +946,12 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions() && supportListGlobally());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createFunction(prefix, database, createFunctionRequest);
 
-        var expected = true;
-        var result = catalog.listFunctionsGlobally(prefix, database, function, 100, null)
-                .functions()
-                .contains(Identifier.create(database, function));
+        var expected = List.of(Identifier.create(database, function));
+        var result = catalog.listFunctionsGlobally(prefix, database, function, 100, null).functions();
 
         assertEquals(expected, result);
     }
@@ -935,15 +961,7 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createFunction(prefix, database, createFunctionRequest);
 
@@ -958,20 +976,13 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         var alterFunctionRequest = new AlterFunctionRequest(Collections.emptyList());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createFunction(prefix, database, createFunctionRequest);
+        catalog.alterFunction(prefix, database, function, alterFunctionRequest);
 
-        assertDoesNotThrow(() -> catalog.alterFunction(prefix, database, function, alterFunctionRequest));
+        assertEquals(function, catalog.getFunction(prefix, database, function).name());
     }
 
     @Test
@@ -979,8 +990,17 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
+        var createFunctionRequest = functionRequest(function);
+        catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createFunction(prefix, database, createFunctionRequest);
+        catalog.dropFunction(prefix, database, function);
+
+        assertEquals(Collections.emptyList(), catalog.listFunctions(prefix, database, 100, null, null).functions());
+    }
+
+    protected CreateFunctionRequest functionRequest(String name) {
+        return new CreateFunctionRequest(
+                name,
                 Collections.emptyList(),
                 Collections.emptyList(),
                 true,
@@ -988,10 +1008,27 @@ public abstract class PaimonCatalogAdapterTest {
                 "test function",
                 Collections.emptyMap()
         );
-        catalog.createDatabase(prefix, createDatabaseRequest);
-        catalog.createFunction(prefix, database, createFunctionRequest);
+    }
 
-        assertDoesNotThrow(() -> catalog.dropFunction(prefix, database, function));
+    protected void createDatabaseAndTable() {
+        catalog.createDatabase(prefix, new CreateDatabaseRequest(database, Collections.emptyMap()));
+        catalog.createTable(prefix, database, new CreateTableRequest(Identifier.create(database, table), tableSchema()));
+    }
+
+    protected void triggerTableSnapshot(String database, String table) {
+        try {
+            var paimonCatalog = catalog.getUnderlyingCatalog();
+            var paimonTable = paimonCatalog.getTable(Identifier.create(database, table));
+            var writeBuilder = paimonTable.newBatchWriteBuilder();
+
+            try (var tableWrite = writeBuilder.newWrite();
+                 var tableCommit = writeBuilder.newCommit()) {
+                tableWrite.write(GenericRow.of(1));
+                tableCommit.commit(tableWrite.prepareCommit());
+            }
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to trigger table snapshot for " + database + "." + table, e);
+        }
     }
 
     protected String uniqueName(String prefix) {
